--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,32 @@
+branca==0.7.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
+contourpy==1.2.1
+cycler==0.12.1
+Cython==3.0.10
 environs==9.5.0
-pandas==2.1.0
-Requests==2.31.0
-tqdm==4.66.2
 folium==0.16.0
+fonttools==4.53.0
+idna==3.7
+Jinja2==3.1.4
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+matplotlib==3.9.0
+numpy==1.26.4
+packaging==24.1
+pandas==2.2.0
+pillow==10.3.0
 polyline==2.0.2
-polyline==2.0.2
+pyparsing==3.1.2
 pypolyline==0.3.6
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+requests==2.31.0
+six==1.16.0
+tqdm==4.66.2
+tzdata==2024.1
+urllib3==2.2.2
+wheel==0.43.0
+xyzservices==2024.6.0
